Day 12 and 13 complete, turn majority of inputs into txt files

--- a/Calorie Counter/Calorie Counter.csproj
+++ b/Calorie Counter/Calorie Counter.csproj
@@ -8,4 +8,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Day11.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
 </Project>
